autometrics/tests/error_locus/fail/arg_count.stderr
error[E0596]: cannot borrow `contents` as mutable, as it is not declared as mutable
  --> tests/error_locus/fail/arg_count.rs:10:5
   |
10 |     contents.push(2);
   |     ^^^^^^^^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
8  |     let mut contents: Vec<u32> = Vec::new();
   |         +++
